<resources>
    <string name="app_name">Cure Adviser</string>

    //Login Page

    <string name="txt_user_name">EMAIL ADDRESS</string>
    <string name="txt_password">PASSWORD</string>
    <string name="txt_do_not_have_account">DONOT HAVE ANY ACCOUNT? </string>
    <string name="txt_sign_up">SIGN UP</string>
    <string name="txt_forgot_password">FORGOT PASSWORD?</string>
    <string name="txt_or">OR</string>
    <string name="txt_facebook_login">FACEBOOK LOGIN</string>
    <string name="hint_user_name">ENTER HERE</string>
    <string name="hint_password">*********</string>
    <string name="txt_btn_login">LOGIN</string>


    //Sign Up

    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="txt_btn_sign_up">GET STARTED</string>
    <string name="txt_full_name">NAME</string>


    // Splash Screen

    <string name="txt_sign_in">Sign In</string>
    <string name="txt_register">Register</string>


    <string name="are_you">Are you</string>
    <string name="txt_doctor">Doctor</string>
    <string name="txt_user">User</string>


    // Dashboard

    <string name="you_logout">You will be Logged out !!</string>
    <string name="ok_button">Ok</string>
    <string name="canceled">Cancel</string>


    <!-- Android push notifications -->

    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_no_internet">Internet Connection Error!</string>
    <string name="msg_no_internet">Please connect to working Internet connection.</string>
    <string name="title_activity_maps">Map</string>

</resources>
